--- a/style.css
+++ b/style.css
@@ -2,3 +2,9 @@ h1 {
 color: orange;
 text-align: center;
 }
+
+#banner {
+    background:url('cropped-hurricane-banner_00.jpg');
+    width:100%;
+    min-height:189px;
+}
