--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@ text-align: center;
 }
 
 body {
-    font-family: 'Bitter';font-size: 22px;
+    font-family: 'Bitter';
+    font-size: 11pt;
     color: red;
 }
 
