--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
 
 #banner {
     background:url('./img/cropped-hurricane-banner_00.jpg');
+    background-size: cover;
     background-repeat: no-repeat;
     min-height:189px;
 }
