--- a/style.css
+++ b/style.css
@@ -13,5 +13,6 @@ body {
     background:url('./img/cropped-hurricane-banner_00.jpg');
     background-size: cover;
     background-repeat: no-repeat;
+    width: 100%;
     min-height:189px;
 }
