--- a/style.css
+++ b/style.css
@@ -6,7 +6,10 @@ text-align: center;
 body {
     font-family: 'Bitter';
     font-size: 11pt;
-    color: red;
+}
+
+img{
+vertical-align:top;
 }
 
 #banner {
@@ -15,4 +18,11 @@ body {
     background-repeat: no-repeat;
     width: 100%;
     min-height:189px;
+}
+
+#bannerText{
+    position:absolute;
+    top:20px;
+    left:10px;
+    background:red;
 }
