--- a/style.css
+++ b/style.css
@@ -14,14 +14,11 @@ body {
     background-repeat: no-repeat;
     width: 100%;
     min-height:189px;
-    opacity: 50%;
+    opacity: 30%;
 }
 
 #bannertext{
-    color: red;
+    color: white;
     font-size: 20pt;
     font-family: 'Bitter';
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 }
