--- a/style.css
+++ b/style.css
@@ -11,7 +11,11 @@ body {
 .banner {
     color: white;
     font-size: 22pt;
-     z-index: 1;
+    z-index: 1;
+    font-family: 'Bitter';
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .banner .bg{
