--- a/style.css
+++ b/style.css
@@ -9,9 +9,10 @@ body {
 }
 
 .banner {
+    position: absolute;
     color: white;
     font-size: 22pt;
-    z-index: 1;
+    z-index: 5;
     font-family: 'Bitter';
     top: 50%;
     left: 50%;
