--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ header{
 
 #menu{
     float: right;
-    width: 70%;
+    width: 100%;
     height: 100%;
     margin: none;
 }
@@ -54,7 +54,7 @@ header{
 
 #menu li:hover a, #menu li span{
     background: #FFF;
-    color: #0074D9;
-    border-left: 1px solid #0074D9;
+    color: #000000;
+    border-left: 1px solid #000000;
     text-decoration: none;
 }
