--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ header{
     padding: 0em 1.5em;
     text-decoration: none;
     font-weight: 600;
+    font-family: 'Bitter';
     text-transform: uppercase;
     line-height: 60px;
 }
