--- a/style.css
+++ b/style.css
@@ -15,13 +15,12 @@ header{
 #top-header{      
     text-align: center;
     height: 60px;
-    width: 100%; 
 }
 
 /******* Navigation Menu *******/
 
 #menu{
-    float: right;
+    float: center;
     width: 60%;
     height: 100%;
     margin: none;
