--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ header{
 
 #menu{
     float: center;
-    width: 60%;
+    width: 100%;
     height: 100%;
     margin: none;
 }
@@ -59,3 +59,25 @@ header{
     border-left: 1px solid #000000;
     text-decoration: none;
 }
+
+/******* Banner *******/
+#header-image-menu{ 
+    top: 10px; 
+    position: relative; 
+} 
+
+#header-image-menu img{ 
+    width: 100%; 
+    margin: none; 
+    padding: none; 
+} 
+
+#image-text{ 
+    position: absolute; 
+    top: 50%; 
+    left: 50%; 
+    font-family: 'Bitter'; 
+    color: #000; 
+    transform: translate(-50%, -50%); 
+    text-align: center; 
+} 
