--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 h1 {
-color: red;
-text-align: center;
+    color: red;
+    text-align: center;
+}
+
+h2 {
+    color: blue; 
+    margin: 0; 
+    padding: 0;
 }
 
 body {
