--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ header{
     top: 50%; 
     left: 50%; 
     font-family: 'Bitter'; 
-    color: red; 
+    color: blue; 
     transform: translate(-50%, -50%); 
     text-align: center; 
 } 
