--- a/style.css
+++ b/style.css
@@ -62,7 +62,6 @@ header{
 #menu li:hover a, #menu li span{
     background: #FFF;
     color: #000000;
-    border-left: 1px solid #000000;
     text-decoration: none;
 }
 
@@ -82,7 +81,8 @@ header{
     position: absolute; 
     top: 50%; 
     left: 50%; 
-    font-family: 'Bitter'; 
+    font-family: 'Bitter';
+    font-size: 22pt;
     color: blue; 
     transform: translate(-50%, -50%); 
     text-align: center; 
