--- a/style.css
+++ b/style.css
@@ -87,6 +87,8 @@ header{
     color: black; 
     transform: translate(-50%, -50%); 
     text-align: center;
-    -webkit-text-stroke-width: thin;
-    -webkit-text-stroke-color: white;
+    text-shadow: -1px 1px 0 #000,
+                 1px 1px 0 #000,
+                 1px -1px 0 #000,
+                 -1px -1px 0 #000;
 } 
