--- a/style.css
+++ b/style.css
@@ -87,8 +87,8 @@ header{
     color: black; 
     transform: translate(-50%, -50%); 
     text-align: center;
-    text-shadow: -1px 1px 0 #FFF,
-                 1px 1px 0 #FFF,
-                 1px -1px 0 #FFF,
-                 -1px -1px 0 #FFF;
+    text-shadow: -1px 1px 0 #A0A0A0,
+                 1px 1px 0 #A0A0A0,
+                 1px -1px 0 #A0A0A0,
+                 -1px -1px 0 #A0A0A0;
 } 
