--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ header{
     top: 50%; 
     left: 50%; 
     font-family: 'Bitter';
-    font-size: 25pt;
+    font-size: 4vw;
     font-weight: bold;
     color: black; 
     transform: translate(-50%, -50%); 
