--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ header{
     margin: 0;
 }
 
-#menu li a, #menu li span{
+@media only screen and (min-width: 768px) {#menu li a, #menu li span{
     display: inline-block;
     padding: 0em 1.5em;
     text-decoration: none;
@@ -55,7 +55,7 @@ header{
     text-transform: uppercase;
     line-height: 60px;
     font-size: 1.5vw;
-}
+    }}
 
 #menu li a{     
     color: #FFF;
