--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ header{
 
 #top-header{      
     text-align: center;
+    height: 60px;
 }
 
 /******* Navigation Menu *******/
@@ -52,6 +53,7 @@ header{
     font-weight: 600;
     font-family: 'Bitter';
     text-transform: uppercase;
+    line-height: 60px;
     font-size: 1.5vw;
     }
 
