--- a/style.css
+++ b/style.css
@@ -19,7 +19,8 @@ header{
 
 #top-header{      
     text-align: center;
-    height: 60px;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 /******* Navigation Menu *******/
@@ -53,7 +54,8 @@ header{
     font-weight: 600;
     font-family: 'Bitter';
     text-transform: uppercase;
-    line-height: 60px;
+    top: 50%;
+    transform: translateY(-50%);
     font-size: 1.5vw;
     }
 
