--- a/style.css
+++ b/style.css
@@ -19,8 +19,7 @@ header{
 
 #top-header{      
     text-align: center;
-    top: 50%;
-    transform: translateY(-50%);
+    height: 60px;
 }
 
 /******* Navigation Menu *******/
@@ -49,13 +48,12 @@ header{
 
 #menu li a, #menu li span{
     display: inline-block;
-    padding: 0em 1.5em;
+    padding: 0vw 0.3vw;
     text-decoration: none;
-    font-weight: 600;
+    font-weight: bold;
     font-family: 'Bitter';
     text-transform: uppercase;
-    top: 50%;
-    transform: translateY(-50%);
+    line-height: 60px;
     font-size: 1.5vw;
     }
 
