--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ header{
     font-weight: bold;
     font-family: 'Bitter';
     text-transform: uppercase;
-    line-height: 60px;
+    line-height: 0.5vw;
     font-size: 1.5vw;
     }
 
