--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ header{
 
 #top-header{      
     text-align: center;
-    height: 60px;
+    height: 1vw;
 }
 
 /******* Navigation Menu *******/
@@ -53,7 +53,7 @@ header{
     font-weight: bold;
     font-family: 'Bitter';
     text-transform: uppercase;
-    line-height: 0.5vw;
+    line-height: 60px;
     font-size: 1.5vw;
     }
 
