--- a/style.css
+++ b/style.css
@@ -9,65 +9,63 @@ h2 {
 }
 
 body {
-    font-family: 'Bitter';
-    font-size: 11pt;
+    font-family: 'Helvetica';
 }
 
-header{   
-    overflow: scroll;
-}
-
-#top-header{      
-    text-align: center;
-    height: 1vw;
-}
 
 /******* Navigation Menu *******/
-
-#menu{
-    float: center;
-    width: 100%;
-    height: 100%;
-    margin: none;
+.topnav {      
+    overflow: hidden;
+    background-color: #000;
 }
 
-#menu ul{
-    text-align: center;
-    float: center;
-    padding: 0;
-    margin: 0;
-    background: #000000;
-    list-style: none;
+.topnav a {
+  float: left;
+  display: block;
+  color: #FFF;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
 }
 
-#menu li{
-    display: inline-block;
-    padding: 0;
-    margin: 0;
+.topnav a:hover {
+  background-color: #FFF;
+  color: black;
 }
 
-#menu li a, #menu li span{
-    display: inline-block;
-    padding: 0vw 1vw;
-    text-decoration: none;
-    font-weight: bold;
-    font-family: 'Bitter';
-    text-transform: uppercase;
-    line-height: 60px;
-    font-size: 1.5vw;
-    }
-
-#menu li a{     
-    color: #FFF;
+.topnav a.active {
+  background-color: #484848;
+  color: white;
 }
 
-#menu li:hover a, #menu li span{
-    background: #FFF;
-    color: #000000;
-    text-decoration: none;
+.topnav .icon {
+  display: none;
 }
 
-/******* Banner *******/
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
+/************ Banner **********/
 #header-image-menu{ 
     bottom: 0px; 
     position: relative; 
