--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ body {
     font-family: 'Bitter';
     font-size: 4vw;
     font-weight: bold;
-    color: black; 
+    color: #484848; 
     transform: translate(-50%, -50%); 
     text-align: center;
     text-shadow: -1px 1px 0 #BEBEBE,
