--- a/style.css
+++ b/style.css
@@ -34,6 +34,14 @@ body {
   font-size: 17px;
 }
 
+/ ******* Center ********/ 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
 .topnav a:hover {
   background-color: #FFF;
   color: black;
