--- a/style.css
+++ b/style.css
@@ -99,9 +99,6 @@ body {
 } 
 
 / ******* Center ********/ 
-.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
+.aligncenter {
+  text-align: center; 
 }
