--- a/style.css
+++ b/style.css
@@ -21,6 +21,8 @@ body {
 #aligncenter {
   display: inline-block;
   text-align: center; 
+  margin-left:auto;
+  margin-right:auto;
 }
 
 /******* Navigation Menu *******/
