--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 }
 
 / ******* Center ********/ 
-#aligncenter{
+#align-center{
   display: inline-block;
   text-align: center; 
   margin:0px auto;
