--- a/style.css
+++ b/style.css
@@ -17,11 +17,11 @@ body {
     font-family: 'Helvetica';
 }
 
-/ ******* Center ********/ 
-#align-center{
-  width: 100%; 
-  text-align: center; 
+/ ******* Center image ********/ 
+img.centered {
   display: block;
+  margin-left: auto; 
+  margin-right: auto;
 }
 
 /******* Navigation Menu *******/
