--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
 
 / ******* Center image ********/ 
 img.centered {
+  position: relative;
   display: block;
   margin-left: auto; 
   margin-right: auto;
