--- a/style.css
+++ b/style.css
@@ -32,6 +32,18 @@ img.centered {
   margin-right: auto;
 }
 
+#left-column {
+   width:50%;
+   float:left;
+   background-color: red;
+}
+#right-column {
+   width:50%;
+   float:right;
+   background-color: blue;
+}
+
+
 /******* Navigation Menu *******/
 .topnav {
   overflow: hidden;
