--- a/style.css
+++ b/style.css
@@ -36,15 +36,15 @@ img.centered {
    width:50%;
    float:left;
    background-color: red;
-   padding-left: 20px;
-   padding-right: 20px
+   margin-left: 10px;
+   margin-right: 10px
 }
 .right-column {
    width:50%;
    float:right;
    background-color: blue;
-   padding-left: 20px;
-   padding-right: 20px
+   margin-left: 10px;
+   margin-right: 10px
 }
 
 
