--- a/style.css
+++ b/style.css
@@ -36,15 +36,15 @@ img.centered {
    width:30%;
    float:left;
    background-color: red;
-   margin-left: 10px;
-   margin-right: 10px
+   padding-left: 10px;
+   padding-right: 10px
 }
 .right-column {
    width:60%;
    float:right;
    background-color: blue;
-   margin-left: 10px;
-   margin-right: 10px
+   padding-left: 10px;
+   padding-right: 10px
 }
 
 
