--- a/style.css
+++ b/style.css
@@ -36,11 +36,17 @@ img.centered {
    width:30%;
    float:left;
    background-color: red;
+   margin-left: 10px;
+   margin-right: 10px;
+   box-sizing: border-box
 }
 .right-column {
    width:70%;
    float:right;
    background-color: blue;
+   margin-left: 10px;
+   margin-right: 10px;
+   box-sizing: border-box
 }
 
 
