--- a/style.css
+++ b/style.css
@@ -11,11 +11,14 @@ h2 {
 p {
     font-size: 16px; 
     line-height: 1.2;
-    font-family: 'Bitter'; 
 }
 
 p.centered {
     text-align: center;
+}
+
+ul {
+    font-size: 16px; 
 }
 
 body {
