--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@ ul {
 
 body {
     font-family: 'Helvetica';
-    background-color: #FFF;
 }
 
 footer {
@@ -44,13 +43,15 @@ img.centered {
    float: left; 
    width:30%;
    padding: 15px; 
-   box-sizing:border-box
+   box-sizing:border-box;
+   background-color: #FFF
 }
 .right-column {
    float: left; 
    width:70%;
    padding: 15px; 
-   box-sizing:border-box
+   box-sizing:border-box;
+   background-color: #FFF
 }
 
 @media screen and (max-width: 800px) {
