--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ img.centered {
 
 #footer-content {
   background-color: #484848;
-  padding: 15px; 
+  padding-left: 15px; 
   color: #FFF;
 }
 
