--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ img.centered {
 .right-column {
    float: left; 
    width:70%;
-   padding: 15px; 
+   padding: 5px 15px 5px 15px; 
    box-sizing:border-box;
    background-color: #FFF
 }
