--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ h2 {
 }
 
 h3 {
-    padding: 5px 0 0 0;
+    padding: 3px 1px 1px 1px;
     font-size:16px;
     font-weight:bold;
     text-align: center;
