--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ h2 {
 
 h3 {
     margin: 0;
-    padding: 3px 1px 1px 1px;
+    padding: 4px 1px 1px 1px;
     font-size:16px;
     font-weight:bold;
     text-align: center;
@@ -25,7 +25,8 @@ p.centered {
     text-align: center;
 }
 p.centered.nopadding{
-    padding: 1px 1px 3px 1px;
+    margin: 0;
+    padding: 1px 1px 4px 1px;
 }
 
 ul {
