--- a/style.css
+++ b/style.css
@@ -83,6 +83,13 @@ img.centered {
   }
 }
 
+.page-title-container{
+    background-color: #D0D0D0;
+    width: 100%;
+    text-align: left; 
+    padding-left: 15px; 
+}
+
 /******* Navigation Menu *******/
 .topnav {
   overflow: hidden;
