--- a/style.css
+++ b/style.css
@@ -84,11 +84,12 @@ img.centered {
 }
 
 .section-title{
-    background-color: #E8E8E8;
+    background-color: #DCDCDC;
     width: 100%;
     text-align: left; 
-    padding-left: 5px 15px 5px 15px; 
-    font-size:22px
+    padding: 5px 15px 5px 15px; 
+    font-size:22px;
+    font-weight: bold; 
 }
 
 /******* Navigation Menu *******/
