--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@ h3 {
     text-align: center;
 }
 
+h4 {font-size:18px;
+    text-align: left; 
+}
+
 p {
     font-size: 16px; 
     line-height: 1.3;
