--- a/style.css
+++ b/style.css
@@ -16,8 +16,9 @@ h3 {
     text-align: center;
 }
 
-h4 {font-size:18px;
+h4 {font-size:25px;
     text-align: left; 
+    padding-left: 15px;
 }
 
 p {
