--- a/style.css
+++ b/style.css
@@ -96,6 +96,10 @@ img.centered {
     font-weight: bold; 
 }
 
+iframe {
+    display: block;
+    border-style:none;
+}
 /******* Navigation Menu *******/
 .topnav {
   overflow: hidden;
