--- a/style.css
+++ b/style.css
@@ -96,10 +96,11 @@ img.centered {
     font-weight: bold; 
 }
 
-iframe {
-    display: block;
-    border-style:none;
-    text-align: center;
+iframe.centered{
+  position: relative;
+  display: block;
+  margin-left: auto; 
+  margin-right: auto;
 }
 /******* Navigation Menu *******/
 .topnav {
