--- a/style.css
+++ b/style.css
@@ -54,13 +54,10 @@ img.centered {
   display: block;
   margin-left: auto; 
   margin-right: auto;
-}
-
-img.centered.lc{
   width = 320px;
-  height=auto;  
+  height=auto; 
+  max-width = 100%
 }
-
 
 .left-column {
    float: left; 
@@ -88,7 +85,7 @@ img.centered.lc{
   .left-column {
     width: 100%;
   }
-  img.centered.lc{
+  img.centered{
   width = 300px;
 }
     
