--- a/style.css
+++ b/style.css
@@ -50,8 +50,10 @@ footer {width: 100%}
 }
 
 img.centered {
+  max-width: 100%;
+  height: auto;
   position: relative;
-  display: block;
+  display: none;
   margin-left: auto; 
   margin-right: auto;
 }
@@ -82,7 +84,9 @@ img.centered {
   .left-column {
     width: 100%;
   }
-    
+  img{
+    display:block;
+  }  
   .right-column {
     width: 100%;
   }
