--- a/style.css
+++ b/style.css
@@ -65,6 +65,8 @@ iframe.centered{
   margin-right: auto;
   max-width: 80%;
   height: auto;
+  padding-bottom: 56.25%;
+  padding-top: 25px;  
 }
 
 
