--- a/style.css
+++ b/style.css
@@ -58,15 +58,18 @@ img.centered {
   height: auto;
 }
 
-iframe.centered{
+.videoWrapper {
   position: relative;
-  display: block;
-  margin-left: auto; 
-  margin-right: auto;
-  max-width: 80%;
-  height: auto;
+  padding-bottom: 56.25%; /* 16:9 */
+  height: 0;
 }
-
+.videoWrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 
 .left-column {
    float: left; 
@@ -95,9 +98,6 @@ iframe.centered{
     width: 100%;
   } 
   img.centered {
-  max-width: 100%;
-}
-iframe.centered {
   max-width: 100%;
 }
   .right-column {
