--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ img.centered {
   position: relative;
   padding-bottom: 56.25%; /* 16:9 */
   height: 0;
+  display: block
 }
 .videoWrapper iframe {
   position: absolute;
