--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ img.centered {
 .videoWrapper {
   position: relative;
   padding-bottom: 56.25%; /* 16:9 */
+  max-width: 80%; 
   margin-left: auto; 
   margin-right: auto;
   height: 0;
@@ -71,7 +72,7 @@ img.centered {
   position: absolute;
   top: 0;
   left: 0;
-  width: 80%;
+  width: 100%;
   height: 100%;
 }
 
