--- a/style.css
+++ b/style.css
@@ -27,12 +27,12 @@ p {
 }
 
 p.centered {
-    text-align: center;
+    
 }
 
-p.centered.caption {
-    margin: 0;
-    font-size: 16px
+caption {
+    text-align: center;
+    font-size: 16px;      
 }
 
 ul {
