--- a/style.css
+++ b/style.css
@@ -22,26 +22,25 @@ h4 {font-size:21px;
 }
 
 p {
-    font-size: 18px; 
     line-height: 1.3;
 }
 
 p.centered {
-    
+    text-align: center;
 }
 
-figcaption {
+p.centered.caption{
     font-style: italic;
-    text-align: center;
     font-size: 16px;      
 }
 
 ul {
-    font-size: 16px; 
+    font-size: 18px; 
 }
 
 body {
     font-family: 'Helvetica';
+    font-size: 18px; 
 }
 
 footer {width: 100%}
