--- a/style.css
+++ b/style.css
@@ -21,6 +21,11 @@ h4 {font-size:21px;
     text-indent: 15px;
 }
 
+h5 {font-size: 20px;
+    text-align: left; 
+    font-weight: bold
+}
+
 p {
     line-height: 1.3;
 }
