--- a/style.css
+++ b/style.css
@@ -23,11 +23,8 @@ h4 {font-size:21px;
 
 h5 {font-size: 20px;
     text-align: left; 
-    font-weight: bold
-}
-
-h5 + ul {
-    margin-top: -10px;
+    font-weight: bold;
+    margin-bottom: 0;
 }
 
 p {
@@ -45,6 +42,10 @@ p.centered.caption{
 
 ul {
     font-size: 18px; 
+}
+
+ul.nospace {
+    margin-top: 0;
 }
 
 body {
