--- a/style.css
+++ b/style.css
@@ -24,8 +24,8 @@ h4 {font-size:21px;
 h5 {font-size: 20px;
     text-align: left; 
     font-weight: bold;
-    margin-bottom: 0;
-    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-top: 15px;
     padding-left: 15px;
 }
 
