--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ img.logo {
   display: block;
   margin-left: auto; 
   margin-right: auto;
-  max-width: 20%;
+  max-width: 30%;
   height: auto;
 }
 
@@ -148,6 +148,10 @@ img.logo {
   img.centered {
   max-width: 100%;
 }
+     img.logo {
+  max-width: 30%;
+}
+    
   .right-column {
     width: 100%;
   }
